--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPj1/lSDmXOS6YC9XOXynLn",
+      "authorship_tag": "ABX9TyMdJdH6cTu/9auClJ1XaybN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,19 +23,28 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nkhenissi/pyhton-for-the-data-scientist/blob/main/prediction_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nkhenissi/pyhton-for-the-data-scientist/blob/main/Modelisation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "mIL8xTQ2eK5Z"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np "
+        "import numpy as np \n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.linear_model import Lasso\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.svm import SVR\n",
+        "import pandas as pd\n",
+        "from sklearn.ensemble import RandomForestRegressor\n"
       ]
     },
     {
@@ -46,7 +55,7 @@
       "metadata": {
         "id": "RemlSxRovLR7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +72,7 @@
         "id": "1LFfXxwreWpM",
         "outputId": "c5843745-907c-4e9d-8c86-67a59e789034"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1005,7 +1014,7 @@
         "id": "mgAlUTmBeaSt",
         "outputId": "1a1c6ccc-5a78-4690-f469-a5fcbc59ae3b"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1355,7 +1364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "metadata": {
         "id": "491f9992",
         "outputId": "ace5f5e5-6d51-4d19-e290-f52233f1e649",
@@ -1705,7 +1714,7 @@
         "id": "MLk9jXEWcCy_",
         "outputId": "07a02b00-129b-4cb1-a571-4c1bf0bf9849"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1728,7 +1737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "metadata": {
         "id": "3bececf8-5312-4de7-a420-827f3a81780f",
         "colab": {
@@ -2054,7 +2063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "id": "e89adab4",
         "outputId": "67bfcc0c-208d-4ab8-947a-46d1d2d6005c",
@@ -2383,7 +2392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "id": "886bfde1",
         "outputId": "927dccd8-0627-4f80-b578-5af1be62baa0",
@@ -2710,7 +2719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "id": "88cf77f8-7bac-4afd-a953-8ab8bdfe4e97",
         "outputId": "846f5e1e-a3ed-4f6c-ea8e-53c575b41f84",
@@ -3046,7 +3055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
         "id": "3baf1ccf-a7bb-45d9-a549-eb0aa2083d63"
       },
@@ -3072,7 +3081,7 @@
         "id": "y3bWgq8qfKjk",
         "outputId": "0dcd980f-e6f3-46bb-ea33-8bd177932cfe"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3392,7 +3401,7 @@
       "metadata": {
         "id": "JhQ00FelfWWc"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3408,7 +3417,7 @@
         "id": "PxTBxJOLfqlT",
         "outputId": "977f6e12-59a7-452c-eba3-a90a227a0204"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3699,16 +3708,12 @@
       "metadata": {
         "id": "J2CrLPKEfxg5"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.linear_model import Lasso\n",
-        "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "\n",
         "# Sélectionner les colonnes à utiliser comme features\n",
@@ -3725,7 +3730,7 @@
       "metadata": {
         "id": "GuSS58K2r4ZQ"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3740,7 +3745,7 @@
         },
         "outputId": "360eaaee-1098-485b-a6e8-e387cca4df57"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3759,7 +3764,7 @@
       "metadata": {
         "id": "GSHd6mXB5R2x"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3778,7 +3783,7 @@
         "id": "ZxcJpRNQ4-fm",
         "outputId": "921a019a-ca2c-4c5a-f981-9894dc35f102"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3818,7 +3823,7 @@
         "id": "7iuNfiWF5Btp",
         "outputId": "8c75862c-d825-4ae2-faa2-05d4ce8a8205"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3833,10 +3838,6 @@
       "cell_type": "code",
       "source": [
         "#evaluation des performance de la regression lasso\n",
-        "# Importez les librairies nécessaires\n",
-        "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "\n",
         "# Évaluez la performance du modèle en utilisant R²\n",
         "r2 = r2_score(y_test, y_pred)\n",
@@ -3873,7 +3874,7 @@
           "height": 342
         }
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3910,8 +3911,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "from sklearn.svm import SVR\n",
         "\n",
         "# Split the data \n",
         "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2, random_state=42)\n",
@@ -3941,7 +3940,7 @@
         },
         "outputId": "7105cdfd-bd02-4329-a026-e9ceaf94d638"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3957,10 +3956,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# First, import the necessary libraries\n",
-        "import pandas as pd\n",
-        "from sklearn.ensemble import RandomForestRegressor\n",
-        "\n",
         "\n",
         "# Split the data \n",
         "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2, random_state=42)\n",
@@ -3990,7 +3985,7 @@
         },
         "outputId": "369bddb9-909f-4f4c-9a58-30bd857aa60c"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4016,7 +4011,7 @@
         "id": "GeJiYQBgqBLh",
         "outputId": "3f0deab3-c724-4156-b6b0-5397d73aa24f"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4350,7 +4345,7 @@
       "metadata": {
         "id": "EwmBkAh8qGkj"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4370,7 +4365,7 @@
       "metadata": {
         "id": "W_kL1aM5rWiU"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4390,7 +4385,7 @@
         "outputId": "e932a3a1-0602-4337-f879-4a6326a2ab89",
         "id": "VLeiJ30Cr6KU"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4424,13 +4419,13 @@
         "print(f\"Mean Squared Error: {mse:.2f}\")"
       ],
       "metadata": {
-        "id": "YKNDTCeTsC-V",
-        "outputId": "75c0f510-22c7-44a2-bc5a-2c79f9cd9c9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YKNDTCeTsC-V",
+        "outputId": "75c0f510-22c7-44a2-bc5a-2c79f9cd9c9c"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4466,13 +4461,13 @@
         "print(f\"R2 Score: {r2:.2f}\")"
       ],
       "metadata": {
-        "id": "qYt22VRtsUu9",
-        "outputId": "f3468f56-4c70-4e0d-b100-57354e15c9a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qYt22VRtsUu9",
+        "outputId": "f3468f56-4c70-4e0d-b100-57354e15c9a6"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
