--- a/Statdes.ipynb
+++ b/Statdes.ipynb
@@ -605,7 +605,7 @@
    "id": "736b3a5b-8f26-4cca-896d-37a49d34afec",
    "metadata": {},
    "source": [
-    "Ainsi, les biens immobiliers construits dont le prix de vente au $m{^2}$ était lee plus élevé en 2021 se situent dans les premiers arrondissements de Marseille, en particulier le 6ème, le 1er, le 3ème et le 5ème."
+    "Ainsi, les biens immobiliers construits dont le prix de vente au $m{^2}$ était lee plus élevé en 2021 se situent dans les premiers arrondissements de Marseille, en particulier le 6ème, le 1er, le 3ème et le 5ème. On doit cependant considérer que les maisons ne sont ici pas prises en compte, ce qui changerait certainement l'ordre de ces arrondissements."
    ]
   }
  ],
