--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdJdH6cTu/9auClJ1XaybN",
+      "authorship_tag": "ABX9TyNgGm8uTkCY0iBWWcWp2G3i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3681,10 +3681,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ZjeCqqPS30Oe"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
-        "# Chargement des données et sélection des colonnes 'col1', 'col2' et 'col3'\n",
         "CP = df4['Code postal']\n",
         "CV = df4['Code voie']\n",
         "CC = df4['Code commune']\n",
@@ -3714,8 +3720,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "# Sélectionner les colonnes à utiliser comme features\n",
         "features= df4.drop(columns=['Valeur fonciere'])\n",
         "\n",
@@ -3795,6 +3799,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I Regression Lasso"
+      ],
+      "metadata": {
+        "id": "oaO1KaJ637kJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La régression Lasso peut être particulièrement utile pour prédire les valeurs foncières d'un bien immobilier en fonction du code postal, du code commune, du code département, du code voie et de la surface.\n",
+        "Elle permet de sélectionner automatiquement les variables les plus pertinentes pour la prédiction de la variable cible. Dans le cas de la prédiction de la valeur foncière d'un bien immobilier, il est possible que seuls certains de ces codes et la surface aient un impact réel sur la valeur du bien. La régression Lasso peut aider à sélectionner automatiquement ces variables les plus pertinentes, ce qui peut améliorer la performance du modèle.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "di8ElZda4BJ3"
+      }
     },
     {
       "cell_type": "code",
