--- a/Notebook_final.ipynb
+++ b/Notebook_final.ipynb
@@ -65,10 +65,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "acda66b6-8d07-45ea-ae1d-dcb0c26a299c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code service sages            100.000000\n",
+      "Reference document            100.000000\n",
+      "1 Articles CGI                100.000000\n",
+      "2 Articles CGI                100.000000\n",
+      "3 Articles CGI                100.000000\n",
+      "4 Articles CGI                100.000000\n",
+      "5 Articles CGI                100.000000\n",
+      "No disposition                  0.000000\n",
+      "Date mutation                   0.000000\n",
+      "Nature mutation                 0.000000\n",
+      "Valeur fonciere                 0.915336\n",
+      "No voie                        35.686981\n",
+      "B/T/Q                          95.316833\n",
+      "Type de voie                   38.409037\n",
+      "Code voie                       0.767595\n",
+      "Voie                            0.772418\n",
+      "Code postal                     0.770589\n",
+      "Commune                         0.000000\n",
+      "Code departement                0.000000\n",
+      "Code commune                    0.000000\n",
+      "Prefixe de section             95.549758\n",
+      "Section                         0.004091\n",
+      "No plan                         0.000000\n",
+      "No Volume                      99.783828\n",
+      "1er lot                        68.971616\n",
+      "Surface Carrez du 1er lot      91.121755\n",
+      "2eme lot                       90.870043\n",
+      "Surface Carrez du 2eme lot     97.137632\n",
+      "3eme lot                       98.332862\n",
+      "Surface Carrez du 3eme lot     99.675102\n",
+      "4eme lot                       99.463753\n",
+      "Surface Carrez du 4eme lot     99.919684\n",
+      "5eme lot                       99.768743\n",
+      "Surface Carrez du 5eme lot     99.971841\n",
+      "Nombre de lots                  0.000000\n",
+      "Code type local                40.541865\n",
+      "Type local                     40.541865\n",
+      "Identifiant local             100.000000\n",
+      "Surface reelle bati            40.599576\n",
+      "Nombre pieces principales      40.599576\n",
+      "Nature culture                 31.467036\n",
+      "Nature culture speciale        95.846772\n",
+      "Surface terrain                31.467036\n",
+      "dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nature mutation</th>\n",
+       "      <th>Valeur fonciere</th>\n",
+       "      <th>Code postal</th>\n",
+       "      <th>Commune</th>\n",
+       "      <th>Code type local</th>\n",
+       "      <th>Surface reelle bati</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>400821</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400822</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400823</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400824</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>13016</td>\n",
+       "      <td>MARSEILLE 16EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400833</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>266250.0</td>\n",
+       "      <td>13004</td>\n",
+       "      <td>MARSEILLE 4EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441051</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>215000.0</td>\n",
+       "      <td>13013</td>\n",
+       "      <td>MARSEILLE 13EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441152</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441153</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441154</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441155</th>\n",
+       "      <td>Vente</td>\n",
+       "      <td>520000.0</td>\n",
+       "      <td>13011</td>\n",
+       "      <td>MARSEILLE 11EME</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1143 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Nature mutation  Valeur fonciere Code postal          Commune  \\\n",
+       "400821           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400822           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400823           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400824           Vente         260000.0       13016  MARSEILLE 16EME   \n",
+       "400833           Vente         266250.0       13004   MARSEILLE 4EME   \n",
+       "...                ...              ...         ...              ...   \n",
+       "441051           Vente         215000.0       13013  MARSEILLE 13EME   \n",
+       "441152           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441153           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441154           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "441155           Vente         520000.0       13011  MARSEILLE 11EME   \n",
+       "\n",
+       "       Code type local  Surface reelle bati  \n",
+       "400821               2                 45.0  \n",
+       "400822               2                 52.0  \n",
+       "400823               2                 15.0  \n",
+       "400824               2                 60.0  \n",
+       "400833               2                 60.0  \n",
+       "...                ...                  ...  \n",
+       "441051               2                 20.0  \n",
+       "441152               2                 45.0  \n",
+       "441153               2                 37.0  \n",
+       "441154               2                100.0  \n",
+       "441155               2                 80.0  \n",
+       "\n",
+       "[1143 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%run '~/work/pyhton-for-the-data-scientist/Data/DVF.ipynb'\n",
     "df_DVF=df5\n",
@@ -590,8 +809,20 @@
    "id": "fd129637-cf94-4b13-bccc-559b97d6a7e9",
    "metadata": {},
    "source": [
-    "On remarque que les prix du foncier à Marseille sont très disparates, et la ville est très inégalitaire."
+    "On remarque que les prix du foncier à Marseille sont très disparates, et la ville est très inégalitaire.\n",
+    "\n",
+    "**Pistes d'ouverture**\n",
+    "\n",
+    "Nous avons été confrontés à plusieurs problèmes insolubles, qui peuvent constituer des pistes de continuation pour ce projet. Déjà, on pourrait mener à nouveau cette étude en incluant les maisons dans la base de données 2021 DVF Marseille. Cela ne changerait pas drastiquement les résultats, mais il s'agit d'une piste d'amélioration."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbd8b8c9-8ba0-4942-af63-9da07d66052a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
