--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgGm8uTkCY0iBWWcWp2G3i",
+      "authorship_tag": "ABX9TyOApMepROStIfw0wKnC/doQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3922,6 +3922,24 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TJ63ZuwN6aOt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Le modèle de régression Lasso peut ne fonctionne pas bien selon les résultats des métriques obtenus. Il peut y avoir plusieurs raisons à cela. Tout d'abord, il est possible que le modèle ne soit pas adapté aux données sur lesquelles il est entraîné. Le modèle de régression Lasso utilise une régularisation L1 qui peut entraîner une sélection de variables, ce qui peut être utile dans certaines situations, mais peut également entraîner un manque de précision dans les prévisions si certaines variables importantes sont exclues du modèle. De plus, le paramètre de régularisation du modèle de régression Lasso peut être mal choisi, ce qui peut également entraîner des résultats médiocres. Enfin, il est possible que les données soient bruyantes ou contiennent des biais, ce qui peut également affecter la qualité des prévisions du modèle."
+      ],
+      "metadata": {
+        "id": "hUU_S0KX7EI0"
+      }
     },
     {
       "cell_type": "markdown",
