--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOApMepROStIfw0wKnC/doQ",
+      "authorship_tag": "ABX9TyNLlYf02OTG8/rG7hu5/FHi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3942,12 +3942,33 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wHumD9iK8HmP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "SVM Model"
+        "II SVM Model"
       ],
       "metadata": {
         "id": "bGl6abPHreVa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La SVM (Support Vector Machine) peut être particulièrement utile pour prédire les valeurs foncières d'un bien immobilier en fonction du code postal, du code commune, du code département, du code voie et de la surface.\n",
+        "\n",
+        "La SVM est particulièrement adaptée aux problèmes de classification, et peut donc être utilisée pour prédire la valeur foncière d'un bien immobilier en fonction de différents codes et de la surface. En utilisant un kernel adapté, la SVM peut trouver une séparation linéaire ou non linéaire entre les différentes classes de valeurs foncières, ce qui peut améliorer la performance du modèle.\n",
+        "La SVM est également robuste aux données bruyantes, c'est-à-dire aux données qui comportent des erreurs ou des valeurs aberrantes. Dans le cas de la prédiction de la valeur foncière d'un bien immobilier, il est possible qu'il y ait des erreurs de saisie ou des valeurs aberrantes dans les codes ou les surfaces, ce qui peut perturber les modèles de régression traditionnels. La SVM peut être moins sensible à ces erreurs et fournir de bons résultats de prédiction malgré ces données bruyantes."
+      ],
+      "metadata": {
+        "id": "rOha2MDc8i_C"
       }
     },
     {
@@ -3996,6 +4017,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "le coefficient de détermination R2 indique que le modèle ne parvient pas à expliquer de manière significative la variance des données. De même, la MSE et la MAE élevée indiquent que le modèle ne parvient pas à prédire correctement les valeurs foncières et que les erreurs de prédiction sont importantes."
+      ],
+      "metadata": {
+        "id": "V-L3MH8x9DR5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "III Random Forest "
+      ],
+      "metadata": {
+        "id": "qkUVrMO77kCw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -4039,6 +4078,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On va essayer de faire la modélisation avec seulement deux variables: \"code postal\" et \"surface rellement bati\""
+      ],
+      "metadata": {
+        "id": "HX4pQmrh7n9j"
+      }
     },
     {
       "cell_type": "code",
@@ -4521,6 +4569,13 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "aGz8a2kV779C"
+      }
     }
   ]
 }
