--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLlYf02OTG8/rG7hu5/FHi",
+      "authorship_tag": "ABX9TyPaJdNx86juR3OLpFsb6Kfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4035,6 +4035,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "la Random Forest est un modèle d'ensemble qui utilise plusieurs arbres de décision pour prédire la variable cible. Cela peut être particulièrement utile dans le cas de la prédiction de la valeur foncière d'un bien immobilier, car elle permet de prendre en compte les relations complexes entre les codes et la surface et de faire des prédictions précises.\n",
+        "\n",
+        "En outre, la Random Forest est particulièrement robuste aux données bruyantes et peut également gérer les données à fortement dimensions. Dans le cas de la prédiction de la valeur foncière d'un bien immobilier, il est possible qu'il y ait des erreurs de saisie ou des valeurs aberrantes dans les codes ou les surfaces, ce qui peut perturber les modèles"
+      ],
+      "metadata": {
+        "id": "MEG8g1tW99jZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -4078,6 +4089,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "De même les résultat des métriques de performance indiquent que le modèle n'a pas réussi à prédire correctement les valeurs foncières à partir des variables eplicatives sélectionnées."
+      ],
+      "metadata": {
+        "id": "_rn_JKyF9grZ"
+      }
     },
     {
       "cell_type": "markdown",
